manifests/0000_11_cluster-kube-scheduler-operator_00_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    openshift.io/run-level: "0"
  name: openshift-cluster-kube-scheduler-operator
