manifests/0000_11_kube-scheduler-operator_00_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    openshift.io/run-level: "0"
  name: openshift-kube-scheduler-operator
