manifests/0000_25_kube-scheduler-operator_00_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    include.release.openshift.io/ibm-cloud-managed: "true"
    include.release.openshift.io/self-managed-high-availability: "true"
    openshift.io/node-selector: ""
    include.release.openshift.io/single-node-production-edge: "true"
  labels:
    openshift.io/run-level: "0"
    openshift.io/cluster-monitoring: "true"
  name: openshift-kube-scheduler-operator
