manifests/0000_11_cluster-kube-scheduler-operator_06_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: openshift-core-operators
  name: openshift-cluster-kube-scheduler-operator
  labels:
    app: openshift-cluster-kube-scheduler-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openshift-cluster-kube-scheduler-operator
  template:
    metadata:
      name: openshift-cluster-kube-scheduler-operator
      labels:
        app: openshift-cluster-kube-scheduler-operator
    spec:
      serviceAccountName: openshift-cluster-kube-scheduler-operator
      containers:
      - name: kube-scheduler-operator-container
        image: docker.io/openshift/origin-cluster-kube-scheduler-operator:v4.0
        imagePullPolicy: Always
        command: ["cluster-kube-scheduler-operator", "operator"]
        args:
        - "--config=/var/run/configmaps/config/config.yaml"
        - "-v=4"
        volumeMounts:
        - mountPath: /var/run/configmaps/config
          name: config
        terminationMessagePolicy: FallbackToLogsOnError
      volumes:
      - name: config
        configMap:
          defaultMode: 440
          name: openshift-cluster-kube-scheduler-operator-config
      nodeSelector:
        node-role.kubernetes.io/master: ""
      tolerations:
      - operator: Exists
