manifests/0000_25_kube-scheduler-operator_06_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: openshift-kube-scheduler-operator
  name: openshift-kube-scheduler-operator
  labels:
    app: openshift-kube-scheduler-operator
  annotations:
    include.release.openshift.io/self-managed-high-availability: "true"
    exclude.release.openshift.io/internal-openshift-hosted: "true"
    include.release.openshift.io/single-node-developer: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openshift-kube-scheduler-operator
  template:
    metadata:
      name: openshift-kube-scheduler-operator
      annotations:
        target.workload.openshift.io/management: '{"effect": "PreferredDuringScheduling"}'
        openshift.io/required-scc: restricted-v2
      labels:
        app: openshift-kube-scheduler-operator
    spec:
      hostUsers: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault    
      serviceAccountName: openshift-kube-scheduler-operator
      containers:
      - name: kube-scheduler-operator-container
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
          readOnlyRootFilesystem: true
        image: docker.io/openshift/origin-cluster-kube-scheduler-operator:v4.0
        imagePullPolicy: IfNotPresent
        command: ["cluster-kube-scheduler-operator", "operator"]
        args:
        - "--config=/var/run/configmaps/config/config.yaml"
        - "--terminate-on-files=/var/run/configmaps/config/config.yaml"
        resources:
          requests:
            memory: 50Mi
            cpu: 10m
        volumeMounts:
        - mountPath: /tmp
          name: tmp
        - mountPath: /var/run/configmaps/config
          name: config
        - mountPath: /var/run/secrets/serving-cert
          name: serving-cert
        terminationMessagePolicy: FallbackToLogsOnError
      volumes:
      - name: tmp
        emptyDir: {}
      - name: serving-cert
        secret:
          secretName: kube-scheduler-operator-serving-cert
          optional: true
      - name: config
        configMap:
          name: openshift-kube-scheduler-operator-config
      nodeSelector:
        node-role.kubernetes.io/master: ""
      priorityClassName: system-cluster-critical
      tolerations:
      - key: "node-role.kubernetes.io/master"
        operator: "Exists"
        effect: "NoSchedule"
      - key: "node-role.kubernetes.io/control-plane"
        operator: "Exists"
        effect: "NoExecute"
      - key: "node.kubernetes.io/unreachable"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 120
      - key: "node.kubernetes.io/not-ready"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 120
