manifests/0000_25_kube-scheduler-operator_02_service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    include.release.openshift.io/self-managed-high-availability: "true"
    service.alpha.openshift.io/serving-cert-secret-name: kube-scheduler-operator-serving-cert
    exclude.release.openshift.io/internal-openshift-hosted: "true"
    include.release.openshift.io/single-node-production-edge: "true"
  labels:
    app: openshift-kube-scheduler-operator
  name: metrics
  namespace: openshift-kube-scheduler-operator
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: openshift-kube-scheduler-operator
  sessionAffinity: None
  type: ClusterIP
