manifests/0000_25_kube-scheduler-operator_02_networkpolicy_default-deny-all.yaml
# Default deny-all network policy for the openshift-kube-scheduler-operator
# namespace. Denies all ingress and egress traffic for all pods in the
# namespace unless explicitly allowed by other network policies.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: openshift-kube-scheduler-operator
  annotations:
    include.release.openshift.io/self-managed-high-availability: "true"
    include.release.openshift.io/single-node-developer: "true"
    exclude.release.openshift.io/internal-openshift-hosted: "true"
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
